Added subtype_rewrite rule support

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
     "diseaseChosen = 'Brain'\n",
-    "\n",
-    "study_identifier = 'placeholder'\n",
+    "study_identifier = 'brain_abc'  #used for copying brain_abc.py to this folder as custom_caisis_prep.py.\n",
+    "custom_prep_fullpath = os.path.join(\".\", study_identifier +\"_custom_caisis_prep.py\") # Can override this to any location you like.\n",
     "type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "study_description = study_identifier + ' study'\n",
     "\n",
@@ -43,13 +43,20 @@
     "import errno\n",
     "import sys\n",
     "import math\n",
+    "import shutil\n",
     "import pipes\n",
     "from typing import List\n",
     "from datetime import datetime\n",
     "from datetime import date\n",
+    "from os.path import exists \n",
     "\n",
     "from zero_dates import   zero_dates\n",
+    "\n",
+    "global missing_date_str\n",
+    "global custom_prep_filename\n",
+    "\n",
     "missing_date = datetime.strptime(missing_date_str, date_format)  #datetime(2222, 2,2)  # TBD: \n",
+    "\n",
     "\n",
     "## -- internal initialization --\n",
     "patients_first_dx = pd.DataFrame()   # just PatientId and DiagnosisDate\n",
@@ -62,7 +69,28 @@
     "noval_list = []   # List of patient IDs with no associated value in one or more of the import_fields. Use this for reporting. \n",
     "\n",
     "foldername_with_headers = '01_with_headers'\n",
-    "foldername_zero_dates = '02_zero_dates'"
+    "foldername_zero_dates = '02_zero_dates'\n",
+    "custom_prep_filename = \"custom_caisis_prep.py\"\n",
+    "has_custom_prep_file = False\n",
+    "# src_path = dataset_folder\n",
+    "# dst = \".\"\n",
+    "\n",
+    "file_path = custom_prep_fullpath \n",
+    "if  exists(file_path):\n",
+    "    print(\"== custom prep exists.\")\n",
+    "    shutil.copy(file_path, os.path.join(\".\", custom_prep_filename))\n",
+    "    has_custom_prep_file = True\n",
+    "    if 'custom_caisis_prep' in sys.modules.keys():\n",
+    "        print(\"====================prepmod exists   \")\n",
+    "        del sys.modules['custom_caisis_prep']\n",
+    "    import custom_caisis_prep\n",
+    "    print(\"testing...\")\n",
+    "    print(custom_caisis_prep.version)\n",
+    "else:\n",
+    "    print(\"== no custom prep exists.\")\n",
+    "    if  exists(\"./\"+custom_prep_filename):\n",
+    "        os.remove(\"./\"+custom_prep_filename)\n",
+    "\n"
    ]
   },
   {
@@ -304,7 +332,7 @@
     "# event_Type is the name of the subtype column (e.g., RADIATION)\n",
     "# subtype_source is the CSV column with the  source info for the subtype (e.g., RADTXTYPE)\n",
     "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", start_date_col_name=None, stop_date_col_name=None, subtype_source=None): \n",
-    "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list\n",
+    "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list, has_custom_prep_file\n",
     "    if (tname in loaded_tables_dict) == False:\n",
     "        print(\"WARN -- Could not process table \"+tname)\n",
     "    else:\n",
@@ -319,6 +347,7 @@
     "        #     df_new_events = pd.DataFrame(columns=[\"PatientID\", \"START_DATE\", \"STOP_DATE\", \"EVENT_TYPE\"])\n",
     "        #     data_clinical_timeline_dfs[event_table_name] = df_new_events\n",
     "\n",
+    "        these_subtype_rewrites = None\n",
     "        noval_list.clear()\n",
     "        rows_to_save = []\n",
     "        column_names = [\"PatientId\", \"EVENT_TYPE\", \"START_DATE\", \"STOP_DATE\"]\n",
@@ -327,7 +356,17 @@
     "                column_names.append(ifield.final_name)\n",
     "        if subtype_source is not None:\n",
     "            column_names.append(event_type)  # e.g., \"RADIATION\"\n",
+    "            if has_custom_prep_file:\n",
+    "                these_subtype_rewrites = custom_caisis_prep.subtype_rewrites[event_type]\n",
+    "                if these_subtype_rewrites is None:\n",
+    "                    print(\"INFO: Event type '\"+event_type+\"' has no subtype rewrite dictionary.\")\n",
+    "                else:\n",
+    "                    print(\"INFO: Event type '\"+event_type+\"' has \"+ str(len(these_subtype_rewrites)) + \" subtype rewrite rules.\")\n",
     "\n",
+    "        print(\">>>>>>>>>>>\")\n",
+    "        print('For ' + event_type+\", rewrite keys:\")\n",
+    "        print(str(these_subtype_rewrites))\n",
+    "        print('>>>end')\n",
     "        # Loop through rows in current_table.\n",
     "        # Pull out each field from import_fields, and add event type, and start and stop dates.\n",
     "        current_table_rows_of_dict = current_table.to_dict('records')\n",
@@ -378,7 +417,12 @@
     "                # print(subtype_source)\n",
     "                # print(str(row))\n",
     "                # print('val...')\n",
-    "                val = str(row[subtype_source])\n",
+    "                val = str(row[subtype_source]).strip()\n",
+    "                if these_subtype_rewrites:\n",
+    "                    key = val.lower()\n",
+    "                    if key in these_subtype_rewrites:\n",
+    "                        val = these_subtype_rewrites[key]\n",
+    "                        print(\"Rewrite Match: \"+key+\" -> \" + val)\n",
     "                if val == \"-1234\":\n",
     "                    print(\"=====1234====\")\n",
     "\n",
@@ -721,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
