Adds subtype_groupings. Fixes date  format constant.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -8,9 +8,9 @@
    "source": [
     "# CaisisImport. A utility to prepare a Caisis-to-Excel export for import into Oncoscape (via cBioPortal format).\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
-    "diseaseChosen = 'Brain'\n",
-    "study_identifier = 'brain_abc'  #used for copying brain_abc.py to this folder as custom_caisis_prep.py.\n",
+    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   #Brain_nov2021\n",
+    "diseaseChosen = 'Sarcoma'  #'Brain'\n",
+    "study_identifier = 'sarcoma_caisis' #'brain_abc'  #used for copying brain_abc.py to this folder as custom_caisis_prep.py.\n",
     "custom_prep_fullpath = os.path.join(\".\", study_identifier +\"_custom_caisis_prep.py\") # Can override this to any location you like.\n",
     "type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "study_description = study_identifier + ' study'\n",
@@ -18,9 +18,10 @@
     "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
     "# table Status is treated separately, first.\n",
     "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
-    "date_format = '%Y-%M-%d'  # '%d-%b-%y'   #'%b %d %Y %I:%M%p'\n",
+    "date_format = '%Y-%m-%d'  # '%d-%b-%y'   #'%b %d %Y %I:%M%p'\n",
     "\n",
     "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the zero date. Default is 30.\n",
+    "global missing_date_str\n",
     "missing_date_str = '2222-02-02'  # use instead of empty/None to indicate missing data"
    ]
   },
@@ -45,6 +46,7 @@
     "import math\n",
     "import shutil\n",
     "import pipes\n",
+    "import re\n",
     "from typing import List\n",
     "from datetime import datetime\n",
     "from datetime import date\n",
@@ -52,7 +54,6 @@
     "\n",
     "from zero_dates import   zero_dates\n",
     "\n",
-    "global missing_date_str\n",
     "global custom_prep_filename\n",
     "\n",
     "missing_date = datetime.strptime(missing_date_str, date_format)  #datetime(2222, 2,2)  # TBD: \n",
@@ -194,7 +195,9 @@
     "    for index, row in diseaseDatedRows.iterrows():\n",
     "        pid = str(row['PatientId'])\n",
     "        if((pid in patientid_date_dict) == False):\n",
-    "            patientid_date_dict[pid] = row['Date']\n",
+    "            justYMD = row['Date']  #datetime.strftime(row['Date'], \"%Y-%m-%d\")\n",
+    "            patientid_date_dict[pid] = justYMD\n",
+    "            \n",
     "        else:\n",
     "            pass\n",
     "    print('Resulting patient IDs = ' + str(len(patientid_date_dict)))   \n",
@@ -210,15 +213,6 @@
     "    \n",
     "    save_file_and_folder(dataset_folder+'/reports/PatientsFirstDx.txt', report_body)\n",
     "    #patients_first_dx\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "patients_first_dx"
    ]
   },
   {
@@ -263,6 +257,8 @@
     "        # print(str(ifield.type)+\", val-type=\" + str(type(val)) + \" val=(\"+str(val)+\")\")\n",
     "        if isinstance(val, str):\n",
     "            val = datetime.strptime(val, date_format)\n",
+    "            if str(val) == \"NaT\":  # Not a Time\n",
+    "                val = \"\"\n",
     "        else:\n",
     "            val=\"\" # TBD: error reporting\n",
     "            print(\"WARN: expected string for date, but isn't a string.\")\n",
@@ -347,7 +343,9 @@
     "        #     df_new_events = pd.DataFrame(columns=[\"PatientID\", \"START_DATE\", \"STOP_DATE\", \"EVENT_TYPE\"])\n",
     "        #     data_clinical_timeline_dfs[event_table_name] = df_new_events\n",
     "\n",
-    "        these_subtype_rewrites = None\n",
+    "        these_subtype_rewrites = None  # for typos and cleanup\n",
+    "        these_subtype_groupings = None # for bucketing for legend\n",
+    "\n",
     "        noval_list.clear()\n",
     "        rows_to_save = []\n",
     "        column_names = [\"PatientId\", \"EVENT_TYPE\", \"START_DATE\", \"STOP_DATE\"]\n",
@@ -359,9 +357,15 @@
     "            if has_custom_prep_file:\n",
     "                these_subtype_rewrites = custom_caisis_prep.subtype_rewrites[event_type]\n",
     "                if these_subtype_rewrites is None:\n",
-    "                    print(\"INFO: Event type '\"+event_type+\"' has no subtype rewrite dictionary.\")\n",
+    "                    print(\"INFO: Event type '\"+event_type+\"' has no subtype rewrite rules.\")\n",
     "                else:\n",
     "                    print(\"INFO: Event type '\"+event_type+\"' has \"+ str(len(these_subtype_rewrites)) + \" subtype rewrite rules.\")\n",
+    "\n",
+    "                these_subtype_groupings = custom_caisis_prep.subtype_groupings[event_type]\n",
+    "                if these_subtype_rewrites is None:\n",
+    "                    print(\"INFO: Event type '\"+event_type+\"' has no subtype grouping rules.\")\n",
+    "                else:\n",
+    "                    print(\"INFO: Event type '\"+event_type+\"' has \"+ str(len(these_subtype_groupings)) + \" subtype grouping rules.\")\n",
     "\n",
     "        print(\">>>>>>>>>>>\")\n",
     "        print('For ' + event_type+\", rewrite keys:\")\n",
@@ -423,6 +427,19 @@
     "                    if key in these_subtype_rewrites:\n",
     "                        val = these_subtype_rewrites[key]\n",
     "                        print(\"Rewrite Match: \"+key+\" -> \" + val)\n",
+    "\n",
+    "                if these_subtype_groupings:\n",
+    "                    lower_val = val.lower()\n",
+    "                    grouping_match_found = False\n",
+    "                    for regex in these_subtype_groupings:\n",
+    "                        if re.search(regex, lower_val, re.IGNORECASE) is not None:\n",
+    "                            val = these_subtype_groupings[regex]\n",
+    "                            print(\"Grouping Match: \"+ regex +\" -> \" + val)\n",
+    "                            grouping_match_found = True\n",
+    "                            break\n",
+    "                    if grouping_match_found == False:\n",
+    "                        val = \"Other \" + event_type\n",
+    "\n",
     "                if val == \"-1234\":\n",
     "                    print(\"=====1234====\")\n",
     "\n",
@@ -451,16 +468,6 @@
     "        #     percent_str = \"{0:.0%}\".format(len(noval_list) / new_values.shape[0])\n",
     "        #     print(\"- Field \" + tname+\".\"+current_lookup_field + \" had \" + str(len(noval_list)) + \" missing entries. (\"+percent_str+\" empty)\")\n",
     "        #     #print(str( len(noval_list) / new_values.shape[0]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gg=data_clinical_timeline_dfs['timeline-radiation']\n",
-    "# gg.loc[gg['PatientId'] == '72613']"
    ]
   },
   {
@@ -611,7 +618,7 @@
     "                else:\n",
     "                    if 'time' in str(type(item)):   # datetime.datetime or pandas...timestamp.Timestamp # this does not work:  col_types[i]==\"DATE\":  # \n",
     "                        # print('DATE for col ' + str(i) +', '+str(col_names[i]))\n",
-    "                        cleaned_item = datetime.strftime(item, '%Y-%M-%d')\n",
+    "                        cleaned_item = datetime.strftime(item, date_format) # '%Y-%M-%d')\n",
     "                if (str(item)==\"nan\"):\n",
     "                    cleaned_item = \"\"\n",
     "                output_row.append(cleaned_item)\n",
@@ -654,6 +661,7 @@
     "\n",
     "    filename = 'patient'\n",
     "    write_file_as_cbioportal(data_clinical_patient, filename)\n",
+    "    \n",
     "    # loop through all table files\n",
     "    for df_key in data_clinical_timeline_dfs.keys():\n",
     "        print('Attempt to write '+df_key+'.')\n",
@@ -751,16 +759,6 @@
     "dir = dataset_folder + \"/\"+foldername_zero_dates+\"/\" \n",
     "create_and_empty_folder(dir)\n",
     "zero_dates(dataset_folder+'/'+foldername_with_headers, patient_info_filename = \"data_clinical_patient.txt\", zero_day_column_name =  \"DIAGNOSISDATE\", output_folder=dir )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for row in data_clinical_patient.head(3).iterrows():\n",
-    "#      print(row[1] ) "
    ]
   },
   {
