Removed "timeline-" from label in bar_overrides

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -18,7 +18,7 @@
     "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
     "# table Status is treated separately, first.\n",
     "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
-    "date_format = '%Y-%m-%d'  # '%d-%b-%y'   #'%b %d %Y %I:%M%p'\n",
+    "date_format = '%Y-%m-%d'  # e.g. 2021-01-23\n",
     "\n",
     "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the zero date. Default is 30.\n",
     "global missing_date_str\n",
@@ -38,6 +38,8 @@
     "# . Export as TSVs\n",
     "# . ZeroDates\n",
     "# . \n",
+    "\n",
+    "# oncoscape_bar_override: {\"version\": \"1.0\", \"style\": \"Symbols\", \"shape\": \"circle\", \"subtypeColors\": {\"rp\": \"#FF0000\", \"xrt\": \"#00FF00\"}}\n",
     "\n",
     "import pandas as pd\n",
     "import os\n",
@@ -65,6 +67,7 @@
     "loaded_tables_dict = {}\n",
     "data_clinical_patient = None\n",
     "data_clinical_timeline_dfs = {}   # dictionary of dataframes, keyed off of \"timeline-foo\" names.\n",
+    "data_clinical_timeline_graph_markers = {}  # dictionary of graph_marker_type values, to define arcs, bars, squares, diamonds, circles, triangles.\n",
     "datafiles_fields = {}\n",
     "current_lookup_field = None  # placeholder.\n",
     "noval_list = []   # List of patient IDs with no associated value in one or more of the import_fields. Use this for reporting. \n",
@@ -92,6 +95,23 @@
     "    if  exists(\"./\"+custom_prep_filename):\n",
     "        os.remove(\"./\"+custom_prep_filename)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_marker_types = {\n",
+    "    \"arcs\"    : { \"mtype\": \"Arcs\", \"shape\":None},\n",
+    "    \"bars\"    : { \"mtype\": \"Bars\", \"shape\":None},\n",
+    "    \"circles\" : { \"mtype\": \"Symbols\", \"shape\":\"circle\"},\n",
+    "    \"squares\" : { \"mtype\": \"Symbols\", \"shape\":\"square\"},\n",
+    "    \"triangles\": { \"mtype\": \"Symbols\", \"shape\":\"triangle\"},\n",
+    "    \"diamonds\" : { \"mtype\": \"Symbols\", \"shape\":\"diamond\"},\n",
+    "    \"stars\"    : { \"mtype\": \"Symbols\", \"shape\":\"star\"},  # Not yet implemented\n",
+    "}\n"
    ]
   },
   {
@@ -327,7 +347,7 @@
     "\n",
     "# event_Type is the name of the subtype column (e.g., RADIATION)\n",
     "# subtype_source is the CSV column with the  source info for the subtype (e.g., RADTXTYPE)\n",
-    "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", start_date_col_name=None, stop_date_col_name=None, subtype_source=None): \n",
+    "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", start_date_col_name=None, stop_date_col_name=None, subtype_source=None, graph_marker=None): \n",
     "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list, has_custom_prep_file\n",
     "    if (tname in loaded_tables_dict) == False:\n",
     "        print(\"WARN -- Could not process table \"+tname)\n",
@@ -464,6 +484,9 @@
     "\n",
     "        added_df = pd.DataFrame(rows_to_save, columns=column_names)\n",
     "        data_clinical_timeline_dfs[event_table_name] = added_df\n",
+    "\n",
+    "        data_clinical_timeline_graph_markers[event_table_name] = graph_marker\n",
+    "        \n",
     "        # if len(noval_list) > 0 :\n",
     "        #     percent_str = \"{0:.0%}\".format(len(noval_list) / new_values.shape[0])\n",
     "        #     print(\"- Field \" + tname+\".\"+current_lookup_field + \" had \" + str(len(noval_list)) + \" missing entries. (\"+percent_str+\" empty)\")\n",
@@ -502,7 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def import_fields_to_event_table():\n",
+    "def import_fields_to_event_tables():\n",
     "    # This is the core of specifying which fields we want to import. May change between datasets, so consider moving to an external file.\n",
     "\n",
     "    print(\"\\nSTEP 4: Import to events tables.\")\n",
@@ -510,7 +533,7 @@
     "        ImportField('EncECOG', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
     "        ImportField('EncKPS', final_name='KPS') ,   #, conversion_function=None),\n",
     "    ]\n",
-    "    import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTER', start_date_col_name='EncDate', stop_date_col_name='EncDate' )\n",
+    "    import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
     "    datafiles_fields['timeline-encounters'] = core_timeline_fields.copy()\n",
     "    datafiles_fields['timeline-encounters'].extend(import_fields)\n",
     "\n",
@@ -523,7 +546,7 @@
     "        ImportField('RadTxTarget', final_name='RadTxTarget' ) ,   \n",
     "        ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,   \n",
     "    ]\n",
-    "    import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\" )\n",
+    "    import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
     "    datafiles_fields['timeline-radiation'] = core_timeline_fields.copy()\n",
     "    datafiles_fields['timeline-radiation'].extend(import_fields)\n",
     "    datafiles_fields['timeline-radiation'].extend( [ ImportField('RADIATION', final_name='RADIATION') ])\n",
@@ -681,7 +704,7 @@
     "    'patient': []   #not including PATIENT_ID\n",
     "}\n",
     "import_fields_to_patient_table()\n",
-    "import_fields_to_event_table()\n"
+    "import_fields_to_event_tables()\n"
    ]
   },
   {
@@ -736,7 +759,6 @@
     "        f.write(\"PATIENT_ID\tSPECIMEN_ID\\n\")\n",
     "        for row in data_clinical_patient.iterrows():\n",
     "            f.write(row[1]['PatientId'] +\"\\tsample-\" + row[1]['PatientId']+\"\\n\")\n",
-    "\n",
     "    # ==== END SAMPLE FILE =====\n",
     "\n",
     "    for event_table_name in data_clinical_timeline_dfs.keys():\n",
@@ -746,8 +768,26 @@
     "            f.write(\"genetic_alteration_type: CLINICAL\\n\") \n",
     "            f.write(\"datatype: TIMELINE\\n\") \n",
     "            f.write(\"data_filename: data_clinical_\"+ event_table_name+\".txt\" +\"\\n\") \n",
-    "            # f.write('oncoscape_bar_override: {\"version\": \"1.0\" }' +\"\\n\") \n",
-    "\n"
+    "            graph_marker = data_clinical_timeline_graph_markers[event_table_name]\n",
+    "            if graph_marker is None:\n",
+    "                # f.write('oncoscape_bar_override: {\"version\": \"1.0\", \"style\": \"Bars\", \"shape\": \"circle\", \"subtypeColors\": {\"rp\": \"#FF0000\", \"xrt\": \"#00FF00\"} }')\n",
+    "                pass\n",
+    "            else:\n",
+    "                label = event_table_name\n",
+    "                if label.startswith('timeline-'):\n",
+    "                    label = label[len('timeline-'):]\n",
+    "\n",
+    "                bar_override = 'oncoscape_bar_override: {\"version\": \"1.0\", \"label\": \"'+label+'\" '\n",
+    "                shape_extender = \"\"\n",
+    "                print(\"===========  graph_marker_key ===========\")\n",
+    "                print(str(graph_marker))\n",
+    "                if graph_marker[\"shape\"] is not None:\n",
+    "                    shape_extender = ', \"shape\": \"'+graph_marker[\"shape\"]+'\" '\n",
+    "                bar_override = bar_override + ', \"style\": \"'+graph_marker[\"mtype\"]+'\" ' + shape_extender\n",
+    "                bar_override = bar_override + ' }'\n",
+    "                \n",
+    "\n",
+    "                f.write(bar_override)\n"
    ]
   },
   {
