--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -10,14 +10,14 @@
     "\n",
     "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   #Brain_nov2021\n",
     "diseaseChosen = 'Sarcoma'  #'Brain'\n",
-    "study_identifier = 'sarcoma_caisis' #'brain_abc'  #used for copying brain_abc.py to this folder as custom_caisis_prep.py.\n",
+    "study_identifier = 'sarcoma_caisis_202111' #'brain_abc'  #used for copying brain_abc.py to this folder as custom_caisis_prep.py.\n",
     "custom_prep_fullpath = os.path.join(\".\", study_identifier +\"_custom_caisis_prep.py\") # Can override this to any location you like.\n",
     "type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "study_description = study_identifier + ' study'\n",
     "\n",
     "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
     "# table Status is treated separately, first.\n",
-    "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
+    "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History', 'Status']\n",
     "date_format = '%Y-%m-%d'  # e.g. 2021-01-23\n",
     "\n",
     "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the zero date. Default is 30.\n",
@@ -281,7 +281,7 @@
     "                val = \"\"\n",
     "        else:\n",
     "            val=\"\" # TBD: error reporting\n",
-    "            print(\"WARN: expected string for date, but isn't a string.\")\n",
+    "            print(\"WARN: expected string for date in \" +ifield.source_name+\", but isn't a string.\")\n",
     "    try:\n",
     "        return val\n",
     "    except:\n",
@@ -499,25 +499,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import LAST_DATE of given field in another table.\n",
+    "# given table T, dataval field F, and dateval field D. Like largest value in dateval_field \"StatusDate\", for matching_val \"Alive\" in import_field.source_name \"Status\". (Then, Transform)\n",
+    "global_gg = []\n",
+    "\n",
+    "def import_lastdate_to_patient_table(tname, import_fields:List[ImportField], dateval_field, dataval_field, matching_val): \n",
+    "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list\n",
+    "    if (tname in loaded_tables_dict) == False:\n",
+    "        print(\"WARN -- Could not process lastdate for table \"+tname)\n",
+    "    else:\n",
+    "        current_table = loaded_tables_dict[tname]\n",
+    "        for ifield in import_fields: # really only one field here.\n",
+    "\n",
+    "            if ifield.source_name in current_table.columns:\n",
+    "                data_clinical_patient.insert(1, ifield.final_name, None)\n",
+    "                current_lookup_field= ifield.source_name\n",
+    "                print(\"Looking for matching_val [\"+matching_val+\"] tbl \" + tname+\".\"+current_lookup_field)\n",
+    "                noval_list.clear()\n",
+    "\n",
+    "                def get_field_value(pid):\n",
+    "                    global current_lookup_field, noval_list, global_gg\n",
+    "\n",
+    "\n",
+    "                    print('done truth test.')\n",
+    "                    gg = current_table.loc[ (current_table['PatientId'] == str(pid)) & (current_table[dataval_field] == str(matching_val))  ]\n",
+    "                    last_alive_str = gg[dateval_field].values[-1]  # <-- TBD: SHould actually loop through dates trings for last date. We *might* get an out of order Alive statement, so don't assume last in list is always the latest.\n",
+    "                    val = None\n",
+    "                    try:\n",
+    "                        val = last_alive_str \n",
+    "                        val_final = process_val(val, ifield)\n",
+    "                        return val_final\n",
+    "                    except:\n",
+    "                        print(\"ERROR \"+current_lookup_field+\", \"+str(pid)+\"   \"+str(val)+\".\")\n",
+    "                        #typef, value, traceback = sys.exc_info()\n",
+    "                        #print('Error value '+ str (value))\n",
+    "                        pass\n",
+    "\n",
+    "                new_values = data_clinical_patient['PatientId'].apply(get_field_value)\n",
+    "                if len(noval_list) > 0 :\n",
+    "                    percent_str = \"{0:.0%}\".format(len(noval_list) / new_values.shape[0])\n",
+    "                    print(\"- Field \" + tname+\".\"+current_lookup_field + \" had \" + str(len(noval_list)) + \" missing entries. (\"+percent_str+\" empty)\")\n",
+    "\n",
+    "                data_clinical_patient[ifield.final_name] = new_values\n",
+    "\n",
+    "            else:\n",
+    "                print(\"==== ERROR: There is no column '\"+ifield.source_name+\"' in '\"+tname+\"' table. Attempting lastdate. ====\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_clinical_patient\n",
+    "global_gg\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def import_fields_to_patient_table():\n",
     "    # This is the core of specifying which fields we want to import. May change between datasets, so consider moving to an external file.\n",
     "    \n",
     "    print(\"\\nSTEP 3: Import columns to patient table.\")\n",
+    "\n",
     "    import_fields = [\n",
-    "        ImportField('PtGender', final_name='Sex') ,   #, conversion_function=None),\n",
-    "        ImportField('PtBirthDate', final_name='BirthDate', type=\"DATE\" )\n",
+    "       ImportField('PtGender', final_name='Sex') ,   #, conversion_function=None),\n",
+    "       ImportField('PtBirthDate', final_name='BirthDate', type=\"DATE\" )\n",
     "    ]\n",
     "    import_to_patient_table('Demographics', import_fields)\n",
     "    datafiles_fields['patient'].extend(import_fields)\n",
     "\n",
+    "   \n",
     "    import_fields = [\n",
-    "        ImportField('SocHxTobaccoType', final_name='Tobacco_Use'),\n",
-    "        ImportField('SocHxTobaccoYears', final_name='Tobacco_Years' ), #SocHxAlcohol\n",
-    "        ImportField('SocHxAlcohol', final_name='Alcohol_Use')\n",
+    "        ImportField('Status', final_name='LastAliveDate', type=\"DATE\") #, conversion_function=None )\n",
+    "    ]\n",
+    "    import_lastdate_to_patient_table('Status', import_fields, dataval_field=\"Status\", dateval_field=\"StatusDate\", matching_val=\"Alive\")\n",
+    "    datafiles_fields['patient'].extend(import_fields)\n",
+    "    \n",
+    "\n",
+    "    import_fields = [\n",
+    "       ImportField('SocHxTobaccoType', final_name='Tobacco_Use'),\n",
+    "       ImportField('SocHxTobaccoYears', final_name='Tobacco_Years' ), #SocHxAlcohol\n",
+    "       ImportField('SocHxAlcohol', final_name='Alcohol_Use')\n",
     "    ]\n",
     "    import_to_patient_table('Social History', import_fields)\n",
     "    datafiles_fields['patient'].extend(import_fields)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
