Added 'safelist' optional parameter to import_to_event_table. This restricts events to those named in the safelist. Added call to import a doxen kinds of Status events.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -347,7 +347,8 @@
     "\n",
     "# event_Type is the name of the subtype column (e.g., RADIATION)\n",
     "# subtype_source is the CSV column with the  source info for the subtype (e.g., RADTXTYPE)\n",
-    "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", start_date_col_name=None, stop_date_col_name=None, subtype_source=None, graph_marker=None): \n",
+    "# safelist, if not None, is the *only* values acceptable for subtype.\n",
+    "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", start_date_col_name=None, stop_date_col_name=None, subtype_source=None, graph_marker=None, safelist=None): \n",
     "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list, has_custom_prep_file\n",
     "    if (tname in loaded_tables_dict) == False:\n",
     "        print(\"WARN -- Could not process table \"+tname)\n",
@@ -395,6 +396,7 @@
     "        # Pull out each field from import_fields, and add event type, and start and stop dates.\n",
     "        current_table_rows_of_dict = current_table.to_dict('records')\n",
     "        for row in current_table_rows_of_dict:\n",
+    "\n",
     "            etype = None\n",
     "            if event_type in row:  # get event from the event_type column\n",
     "                etype = row[event_type]\n",
@@ -447,6 +449,13 @@
     "                    if key in these_subtype_rewrites:\n",
     "                        val = these_subtype_rewrites[key]\n",
     "                        print(\"Rewrite Match: \"+key+\" -> \" + val)\n",
+    "\n",
+    "                if safelist is not None:\n",
+    "                    if val not in safelist:\n",
+    "                        print('safelist does not contain ['+val+'].')\n",
+    "                        continue\n",
+    "                    else:\n",
+    "                        print('ok safelist for '+val)\n",
     "\n",
     "                if these_subtype_groupings:\n",
     "                    lower_val = val.lower()\n",
@@ -639,6 +648,28 @@
     "    datafiles_fields['timeline-medicaltherapy'] = core_timeline_fields.copy()\n",
     "    datafiles_fields['timeline-medicaltherapy'].extend(import_fields)\n",
     "    datafiles_fields['timeline-medicaltherapy'].extend( [ ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') ])\n",
+    "    \n",
+    "    import_fields = [\n",
+    "        # ImportField('Status', final_name='Status' ) ,   \n",
+    "    ]\n",
+    "    import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
+    "        '1st Progression',\n",
+    "        '2nd Progression',\n",
+    "        '3rd Progression',\n",
+    "        'Last Status Check',\n",
+    "        'Recurrence',\n",
+    "        'Last Status Check',\n",
+    "        'Local Recurrence',\n",
+    "        'Locoregional',\n",
+    "        'Metastatic Disease',\n",
+    "        'New Diagnosis',\n",
+    "        'Newly Diagnosed',\n",
+    "        'No Evidence of Disease',\n",
+    "\n",
+    "        ] )\n",
+    "    datafiles_fields['timeline-status'] = core_timeline_fields.copy()\n",
+    "    datafiles_fields['timeline-status'].extend(import_fields)\n",
+    "    datafiles_fields['timeline-status'].extend( [ ImportField('STATUS', final_name='STATUS') ])\n",
     "    \n",
     "\n"
    ]
