Fixed case of rewrite or grouping rules missing for an event type.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   #Brain_nov2021\n",
     "diseaseChosen = 'Sarcoma'  #'Brain'\n",
-    "study_identifier = 'sarcoma_caisis_202111' #'brain_abc'  #used for copying brain_abc.py to this folder as custom_caisis_prep.py.\n",
+    "study_identifier = 'sarcoma_caisis' #'brain_abc'  #used for copying brain_abc.py to this folder as custom_caisis_prep.py.\n",
     "custom_prep_fullpath = os.path.join(\".\", study_identifier +\"_custom_caisis_prep.py\") # Can override this to any location you like.\n",
     "type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "study_description = study_identifier + ' study'\n",
@@ -350,6 +350,9 @@
     "# safelist, if not None, is the *only* values acceptable for subtype.\n",
     "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", start_date_col_name=None, stop_date_col_name=None, subtype_source=None, graph_marker=None, safelist=None): \n",
     "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list, has_custom_prep_file\n",
+    "    print(\"INFO starting to import for event_type of....\")\n",
+    "    print(str(event_type))\n",
+    "    print(\"... .\")\n",
     "    if (tname in loaded_tables_dict) == False:\n",
     "        print(\"WARN -- Could not process table \"+tname)\n",
     "    else:\n",
@@ -376,18 +379,22 @@
     "        if subtype_source is not None:\n",
     "            column_names.append(event_type)  # e.g., \"RADIATION\"\n",
     "            if has_custom_prep_file:\n",
-    "                these_subtype_rewrites = custom_caisis_prep.subtype_rewrites[event_type]\n",
-    "                if these_subtype_rewrites is None:\n",
+    "\n",
+    "                if event_type not in custom_caisis_prep.subtype_rewrites:\n",
     "                    print(\"INFO: Event type '\"+event_type+\"' has no subtype rewrite rules.\")\n",
     "                else:\n",
+    "                    these_subtype_rewrites = custom_caisis_prep.subtype_rewrites[event_type]\n",
     "                    print(\"INFO: Event type '\"+event_type+\"' has \"+ str(len(these_subtype_rewrites)) + \" subtype rewrite rules.\")\n",
     "\n",
-    "                these_subtype_groupings = custom_caisis_prep.subtype_groupings[event_type]\n",
-    "                if these_subtype_rewrites is None:\n",
+    "\n",
+    "                \n",
+    "                if event_type not in custom_caisis_prep.subtype_groupings:\n",
     "                    print(\"INFO: Event type '\"+event_type+\"' has no subtype grouping rules.\")\n",
     "                else:\n",
+    "                    these_subtype_groupings = custom_caisis_prep.subtype_groupings[event_type]\n",
     "                    print(\"INFO: Event type '\"+event_type+\"' has \"+ str(len(these_subtype_groupings)) + \" subtype grouping rules.\")\n",
-    "\n",
+    "            else:\n",
+    "                print(\"In import_to_event_Table, has_custom_prep_file FALSE\")\n",
     "        print(\">>>>>>>>>>>\")\n",
     "        print('For ' + event_type+\", rewrite keys:\")\n",
     "        print(str(these_subtype_rewrites))\n",
