Slight rearrangement of user-defined variables at top

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -8,21 +8,22 @@
    "source": [
     "# CaisisImport. A utility to prepare a Caisis-to-Excel export for import into Oncoscape (via cBioPortal format).\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   #Brain_nov2021\n",
+    "# dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
+    "# diseaseChosen = 'Brain'  \n",
+    "# study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
+    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "\n",
+    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
     "diseaseChosen = 'Sarcoma'  #'Brain'\n",
-    "study_identifier = 'sarcoma_caisis' #'brain_abc'  #used for copying brain_abc.py to this folder as custom_caisis_prep.py.\n",
-    "custom_prep_fullpath = os.path.join(\".\", study_identifier +\"_custom_caisis_prep.py\") # Can override this to any location you like.\n",
+    "study_identifier = 'sarcoma_caisis'  \n",
     "type_of_cancer = \"misc\"  # Use cbioportal term\n",
-    "study_description = study_identifier + ' study'\n",
     "\n",
-    "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
-    "# table Status is treated separately, first.\n",
-    "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History', 'Status']\n",
-    "date_format = '%Y-%m-%d'  # e.g. 2021-01-23\n",
+    "# dataset_folder = '../Caisis_NonPublicData/Liver_nov2021'   \n",
+    "# diseaseChosen = 'Liver Cancer'   \n",
+    "# study_identifier = 'liver_caisis' \n",
+    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
-    "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the zero date. Default is 30.\n",
-    "global missing_date_str\n",
-    "missing_date_str = '2222-02-02'  # use instead of empty/None to indicate missing data"
+    "\n"
    ]
   },
   {
@@ -57,6 +58,19 @@
     "from zero_dates import   zero_dates\n",
     "\n",
     "global custom_prep_filename\n",
+    "\n",
+    "#===============================================================\n",
+    "custom_prep_fullpath = os.path.join(\".\", study_identifier +\"_custom_caisis_prep.py\") # Can override this to any location you like.\n",
+    "study_description = study_identifier + ' study'\n",
+    "\n",
+    "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
+    "# table Status is treated separately, first.\n",
+    "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History', 'Status']\n",
+    "date_format = '%Y-%m-%d'  # e.g. 2021-01-23\n",
+    "\n",
+    "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the zero date. Default is 30.\n",
+    "global missing_date_str\n",
+    "missing_date_str = '2222-02-02'  # use instead of empty/None to indicate missing data\n",
     "\n",
     "missing_date = datetime.strptime(missing_date_str, date_format)  #datetime(2222, 2,2)  # TBD: \n",
     "\n",
@@ -212,6 +226,7 @@
     "            \n",
     "    diseaseDatedRows = diseaseRows[diseaseRows.Date.isna()==False]\n",
     "    patientid_date_dict = {}\n",
+    "    print(\"===START PATIENT LOOP===\")\n",
     "    for index, row in diseaseDatedRows.iterrows():\n",
     "        pid = str(row['PatientId'])\n",
     "        if((pid in patientid_date_dict) == False):\n",
@@ -220,6 +235,8 @@
     "            \n",
     "        else:\n",
     "            pass\n",
+    "    print(\"===END PATIENT LOOP===\")\n",
+    "\n",
     "    print('Resulting patient IDs = ' + str(len(patientid_date_dict)))   \n",
     "\n",
     "    data = []\n",
@@ -455,14 +472,12 @@
     "                    key = val.lower()\n",
     "                    if key in these_subtype_rewrites:\n",
     "                        val = these_subtype_rewrites[key]\n",
-    "                        print(\"Rewrite Match: \"+key+\" -> \" + val)\n",
+    "                        # print(\"Rewrite Match: \"+key+\" -> \" + val)\n",
     "\n",
     "                if safelist is not None:\n",
     "                    if val not in safelist:\n",
-    "                        print('safelist does not contain ['+val+'].')\n",
+    "                        # print('safelist does not contain ['+val+'].')\n",
     "                        continue\n",
-    "                    else:\n",
-    "                        print('ok safelist for '+val)\n",
     "\n",
     "                if these_subtype_groupings:\n",
     "                    lower_val = val.lower()\n",
@@ -470,7 +485,7 @@
     "                    for regex in these_subtype_groupings:\n",
     "                        if re.search(regex, lower_val, re.IGNORECASE) is not None:\n",
     "                            val = these_subtype_groupings[regex]\n",
-    "                            print(\"Grouping Match: \"+ regex +\" -> \" + val)\n",
+    "                            # print(\"Grouping Match: \"+ regex +\" -> \" + val)\n",
     "                            grouping_match_found = True\n",
     "                            break\n",
     "                    if grouping_match_found == False:\n",
